# copypasta-archive-bot

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
husky/: .dockerignore  Cargo.toml  Dockerfile  README.md  init.sql  pastas.db  reset.sql  rocket.toml
husky/src/: main.rs
husky/src/db/: mod.rs
husky/src/log/: mod.rs
husky/src/server/: actix_save.rs  actix_send.rs  mod.rs  save.rs  send.rs  util.rs
husky/src/server/rocket/: rocket_save.rs  rocket_send.rs
shepard/: .env  Dockerfile  README.md  package-lock.json  package.json
shepard/src/: bot.ts  db.ts  index.ts  log.ts
