[package]
name = "husky"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_contrib = "0.4.10"
sqlite = "0.26.0"
md5 = "0.7.0"
colored = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }