[package]
name = "husky"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# When running tests in this project, run them single threaded as they read and write to the same file.
# cargo test -- --test-threads=1

[dependencies]
dotenv = "0.15.0"
rocket = "0.5.0-rc.1"
actix-web = "3"
sqlite = "0.26.0"
md5 = "0.7.0"
colored = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.1.0"